--- a/css/login.css
+++ b/css/login.css
@@ -31,7 +31,7 @@ body {
     width: 100%;
   }
   
-  input[type="submit"] {
+  input[type="button"] {
     background-color: #0a790a;
     border: none;
     border-radius: 5px;
@@ -93,7 +93,7 @@ body {
       padding: 5px;
     }
   
-    input[type="submit"] {
+    input[type="button"] {
       font-size: 1rem;
       padding: 5px;
     }
