--- a/login/login.css
+++ b/login/login.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('');
+    background-image: url('https://media.discordapp.net/attachments/1072529065057198220/1093651568252952586/1cb3fe5e-5dc4-4e09-84ea-596875e4e7df.jpg');
     background-color: #0a790a;
     background-size: cover;
     color: #fdfdfd;
