--- a/css/credencial.css
+++ b/css/credencial.css
@@ -1,21 +1,21 @@
 
 
   body {
+    background-image: url('https://media.discordapp.net/attachments/1072529065057198220/1093651568546566204/dd443d83-ab86-44fc-8293-521dc95972e7.jpg');
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #0a790a;
-    background: linear-gradient(to bottom right, #0a790a, #000000);
+    background-color: #0a790a;;
     color: #ffffff;
   }
 
   .card {
     max-width: 450px;
     margin: 20px auto;
-    background-color: #1c1c1c;
+    background-color: transparent;
     padding: 20px;
     border-radius: 3%;
     color: rgb(255, 255, 255) !important;
-    
-  box-shadow: 0 4px 11px #427442;
+    block-size: 0px;
   transition: all 0.2s ease;
   }
 
@@ -47,6 +47,7 @@
     height: auto;
     margin: 0 auto;
     border-radius: 50%;
+    box-shadow: #000000;
   }
 
   .card h1 {
